# stack_to_multiscale_ngff

./: .gitignore  README.md  README.md.bak  setup.cfg  setup.cfg.bak  setup.py  setup.py.bak  tox.ini
stack_to_multiscale_ngff/: _builder_colors.py  _builder_image_utils.py  _builder_img_processing.py  _builder_init.py  _builder_json_input.py  _builder_multiscale_generator.py  _builder_ome_zarr_utils.py  _builder_unused.py  _builder_utils.py  archived_nested_store.py  arg_parser.py  builder.py  h5_nested_store.py  h5_nested_store2.py  h5_nested_store3.py  h5_nested_store4.py  h5_shard_store.py  tiff_manager.py  utils.py
stack_to_multiscale_ngff/bil_test/: all_fmost_for_conversion.py  all_fmost_for_conversion_auto_batch_cmd_list.py  auto_batch_cmd_list.py  batch_cmd_list.txt  batch_submit.txt  bench_mark_results.xlsx  lines_to_process.txt  slurm_test_conv.txt  slurm_test_conv.txt.bak  test_zarr.py  tiff_stack_to_multires_18052_v4.py  tiff_stack_to_multires_182725_v3.py  tiff_stack_to_multires_182725_v4.py
stack_to_multiscale_ngff/cbi_test/: test.txt  test.txt.bak
stack_to_multiscale_ngff/experimental/: fast_int_gaussian_blur.py  nii.py
