[metadata]
name = stack_to_multiscale_ngff

author = Alan M Watson
author_email = alan.watson@pitt.edu
url = https://github.com/CBI-PITT/stack_to_multiscale_ngff
license = BSD-3-Clause
description = A class for easy manipulation of tiff files
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/CBI-PITT/stack_to_multiscale_ngff/issues
    Documentation = https://github.com/CBI-PITT/stack_to_multiscale_ngff#README.md
    Source Code = https://github.com/CBI-PITT/stack_to_multiscale_ngff
    User Support = https://github.com/CBI-PITT/stack_to_multiscale_ngff/issues

[options]
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    numpy
	scikit-image
	tifffile
	dask
	distributed
	numcodecs
	h5py
	hdf5plugin
	zarr
	psutil
	imagecodecs